// Generated Protobuf Schema
syntax = "proto3";

package graphql;

import "google/protobuf/timestamp.proto";

enum UserStatus {
  ACTIVE = 0;
  INACTIVE = 1;
  SUSPENDED = 2;
}

message User {
  string id = 1;
  string name = 2;
  UserStatus status = 3;
}

message UserUpdate {
  User user = 1;
  string updateType = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message ChatMessage {
  string id = 1;
  string userId = 2;
  string text = 3;
  google.protobuf.Timestamp timestamp = 4;
}

service GraphQLService {
  rpc GetUser(GetUserRequest) returns (User);
  rpc UserUpdates(UserUpdatesRequest) returns (stream UserUpdate);
  rpc NewMessages(NewMessagesRequest) returns (stream ChatMessage);
  rpc UserStatusChanged(Empty) returns (stream User);
}

